# ipa_multipoint

./: Cargo.toml  Readme.md
benches/: benchmark_main.rs
benches/benchmarks/: ipa_prove.rs  ipa_verify.rs  ipa_verify_multi_exp.rs  mod.rs  multipoint_prove.rs  multipoint_verify.rs
src/: crs.rs  ipa.rs  ipa2.rs  lagrange_basis.rs  lib.rs  math_utils.rs  multiproof.rs  transcript.rs
src/crs/: basic.rs  precomputed.rs
