[package]
name = "ipa_bandersnatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
merlin = "1.2.0"
criterion = "0.3.4"
bandersnatch = { git = "https://github.com/zhenfeizhang/bandersnatch" }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
[[bench]]
name = "benchmark_main"
harness = false
